# Formal_Languages

./: .gitignore  README.md  message.txt
automata/: .gitignore  CMakeLists.txt  README.md  automata.cpp  automata.h  main.cpp  tests.cpp
practicum2/: CMakeLists.txt  README.md  earley.cpp  earley.h  main.cpp  test  tests.cpp
workshop1/: .gitignore  CMakeLists.txt  README.md  automata.cpp  automata.h  input.txt  main.cpp  tests.cpp
